Version 0.3.X
 Bugfix:
  - Removed the no-autofit tag from Vass ships, as it caused issues with custom orders and some modded hullmods
  - Ensured prototypes do not drop from most "mundane" sources


Version 0.3.2b
 Bugfix:
  - Removed massive debug logs spawning all the time
     > How did I miss this, now again?


Version 0.3.2a
 General:
  - Made Vass punishment fleets considerably more common at low Vass Power, and slightly more common at high ones
  - Increased spawn delay for Vass Punishment fleets slightly
  - Stopped the Vass from attempting to extort battlestations

 Bugfixes:
  - Fixed the Perturba Weapon Testing event not being finishable
  - The Debug flag is no longer enabled for the Perturba Weapon Testing event; it should no longer appear all the time regardless of condition
  - Fixed the intel description for the Perturba Weapon Testing event
  - Fixed Perturba Prototypes auto-disabling themselves in combat at times
  - Fixed Perturba Prototypes having more target leading issues than intended
     > This quest was quite broken on release! I'm sorry for that, hopefully the big issues are now fixed
  



Version 0.3.2: Time for a new quest
 General:
  - Added a new repeatable quest for Perturba after you've met their contact
	> This one's almost my favorite addition, and has some interesting mechanics behind it. There'll be more additions to it later
  - Added basic faction description
  - Updated some text for the initial Perturba quest
  - Added a pair of Command Console commands for manipulating Vass standing and resetting the mod practically back to square 1
	> Mostly in case people want to change their approach between patches without needing an entirely new savefile. Use at own risk, though, it's not 100% stable in all situations
  - Added the Tizona Emitter, the first missile weapon of the families
  - Adjusted Chrono Jump visuals
	> No more particles, viva la trail!