@@ -2,6 +2,7 @@ Version 0.3.X
  Bugfix:
   - Removed the no-autofit tag from Vass ships, as it caused issues with custom orders and some modded hullmods
   - Ensured prototypes do not drop from most "mundane" sources
+  - Fixed a bug causing Yawarakai-Te weapons use more flux than intended when firing without a target
 
 
 Version 0.3.2b
